force-app/main/default/objects/Credit_Memo__c/fields/Account__c.field-meta.xml
<CustomField>
  <fullName>Account__c</fullName>
  <label>Account</label>
  <type>Lookup</type>
  <referenceTo>Account</referenceTo>
  <relationshipName>Account_Credit_Memos</relationshipName>
  <relationshipLabel>Credit Memos</relationshipLabel>
</CustomField>