force-app/main/default/objects/Credit_Memo__c/fields/Application_Count__c.field-meta.xml
<CustomField>
    <fullName>Application_Count__c</fullName>
    <label>Application Count</label>
    <summaryFilterItems>
        <field>Credit_Memo_Application__c.Status__c</field>
        <operation>equals</operation>
        <value>Applied</value>
    </summaryFilterItems>
    <summaryForeignKey>Credit_Memo_Application__c.Credit_Memo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>