force-app/main/default/objects/Credit_Memo__c/fields/Applied_Amount__c.field-meta.xml
<CustomField>
    <fullName>Applied_Amount__c</fullName>
    <label>Applied Amount</label>
    <summarizedField>Credit_Memo_Application__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Credit_Memo_Application__c.Status__c</field>
        <operation>equals</operation>
        <value>Applied</value>
    </summaryFilterItems>
    <summaryForeignKey>Credit_Memo_Application__c.Credit_Memo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>