force-app/main/default/objects/Credit_Memo__c/fields/Billing_Group_Key__c.field-meta.xml
<CustomField>
  <fullName>Billing_Group_Key__c</fullName>
  <label>Billing Group Key</label>
  <type>Text</type>
  <length>36</length>
</CustomField>