force-app/main/default/objects/Credit_Memo__c/fields/Lines_Total__c.field-meta.xml
<CustomField>
    <fullName>Lines_Total__c</fullName>
    <label>Lines Total</label>
    <summarizedField>Credit_Memo_Line__c.Amount__c</summarizedField>
    <summaryForeignKey>Credit_Memo_Line__c.Credit_Memo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>