force-app/main/default/objects/Credit_Memo__c/fields/Public_Hash__c.field-meta.xml
<CustomField>
    <fullName>Public_Hash__c</fullName>
    <label>Public Hash</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>