force-app/main/default/objects/Credit_Memo__c/fields/Remaining_Amount__c.field-meta.xml
<CustomField>
  <fullName>Remaining_Amount__c</fullName>
  <label>Remaining Amount</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>2</scale>
  <formula>
      BLANKVALUE(Total_Amount__c,0) - BLANKVALUE(Applications_Applied__c,0)
  </formula>
</CustomField>