force-app/main/default/objects/Credit_Memo__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
  <fullName>Total_Amount__c</fullName>
  <label>Total Amount</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>2</scale>
  <formula>BLANKVALUE(Lines_Total__c, 0)</formula>
</CustomField>